; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Type.c_Type_Cmp.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Type.c_Type_Cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Type = type { i32 }

@Type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Type*, %struct.Type*)* @Type_Cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Type_Cmp(%struct.Type* %0, %struct.Type* %1) #0 {
  %3 = alloca %struct.Type*, align 8
  %4 = alloca %struct.Type*, align 8
  %5 = alloca %struct.Type*, align 8
  store %struct.Type* %0, %struct.Type** %3, align 8
  store %struct.Type* %1, %struct.Type** %4, align 8
  %6 = load %struct.Type*, %struct.Type** %4, align 8
  %7 = load i32, i32* @Type, align 4
  %8 = call %struct.Type* @cast(%struct.Type* %6, i32 %7)
  store %struct.Type* %8, %struct.Type** %5, align 8
  %9 = load %struct.Type*, %struct.Type** %3, align 8
  %10 = call i32 @Type_Builtin_Name(%struct.Type* %9)
  %11 = load %struct.Type*, %struct.Type** %5, align 8
  %12 = call i32 @Type_Builtin_Name(%struct.Type* %11)
  %13 = call i32 @strcmp(i32 %10, i32 %12)
  ret i32 %13
}

declare dso_local %struct.Type* @cast(%struct.Type*, i32) #1

declare dso_local i32 @strcmp(i32, i32) #1

declare dso_local i32 @Type_Builtin_Name(%struct.Type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
